--- a/package.json
+++ b/package.json
@@ -9,11 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
+    "lucide-react": "^0.454.0",
     "next": "^14.1.0",
     "pocketbase": "^0.21.5",
     "react": "^18.2.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
-    "react-tailwindcss": "^0.0.1"
+    "react-tailwindcss": "^0.0.1",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20.11.6",
